...
                        height: self.scaledButtonSize(
                            for: geometry.size,
                            safeAreaInsets: geometry.safeAreaInsets
                        )
                    )
                    .frame(maxWidth: .infinity, alignment: .center)
                    .accessibilityIdentifier("draw-button")
                } else {
                    ProgressView()
                        .frame(
                            width: self.scaledButtonSize(
                                for: geometry.size,
                                safeAreaInsets: geometry.safeAreaInsets
...
